tendenciasVentaPerfil admin
