# uStoreAPI/uStoreAPI/Dtos/AdminPerfilDto.cs
@@ -1,0 +1,10 @@
+﻿namespace uStoreAPI.Dtos
+{
+    public class PerfilDto
+    {
+        public string? Nombre { get; set; }
+        public DateTime? FechaRegistro { get; set; }
+        public string? ImagenP { get; set; }
+        public string? correo { get; set;}
+    }
+}
