# uStoreAPI/uStoreAPI/bin/Release/net7.0/swagger.json
@@ -2274,6 +2274,38 @@
         }
       }
     },
+    "/api/Perfil/GetPerfil": {
+      "get": {
+        "tags": [
+          "Perfil"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/PerfilDto"
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "schema": {
+              "$ref": "#/definitions/ProblemDetails"
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "schema": {
+              "$ref": "#/definitions/ProblemDetails"
+            }
+          }
+        }
+      }
+    },
     "/api/PeriodosPredeterminados/GetPeriodos": {
       "get": {
         "tags": [
@@ -3495,6 +3527,66 @@
           "text/json"
         ],
         "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "$ref": "#/definitions/filtrosGraficaDto"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/TendenciaDto"
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "schema": {
+              "$ref": "#/definitions/ProblemDetails"
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "schema": {
+              "$ref": "#/definitions/ProblemDetails"
+            }
+          },
+          "500": {
+            "description": "Server Error"
+          }
+        }
+      }
+    },
+    "/api/TendenciasVenta/GetTendenciasPerfil": {
+      "post": {
+        "tags": [
+          "TendenciasVenta"
+        ],
+        "consumes": [
+          "application/json-patch+json",
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "idTienda",
+            "type": "integer",
+            "format": "int32",
+            "collectionFormat": "multi"
+          },
           {
             "in": "body",
             "name": "body",
@@ -5541,6 +5633,25 @@
           "items": {
             "$ref": "#/definitions/DetallesUsuario"
           }
+        }
+      },
+      "additionalProperties": false
+    },
+    "PerfilDto": {
+      "type": "object",
+      "properties": {
+        "nombre": {
+          "type": "string"
+        },
+        "fechaRegistro": {
+          "format": "date-time",
+          "type": "string"
+        },
+        "imagenP": {
+          "type": "string"
+        },
+        "correo": {
+          "type": "string"
         }
       },
       "additionalProperties": false
